--- a/html/1day/07_paragraph_text.html
+++ b/html/1day/07_paragraph_text.html
@@ -6,11 +6,16 @@
     <title>Paragraph_text</title>
   </head>
   <body>
+    <h1>&lt;Paragraph Tag&gt;</h1>
     <p>qwewqeqweqweqweqweqwe dsdfsf</p>
+    <hr />
+
     <p>
-      <a href="https://www.naver.com/">Naver </a>
+      <a href="https://www.naver.com/">Naver</a>
       <a href="https://www.google.com/">Google </a>
     </p>
+    <hr />
+
     <p>Lorem ipsum dolor <b>bbb</b></p>
     <p>Lorem ipsum dolor <i>iii</i></p>
     <p>Lorem ipsum dolor <strong>ssss</strong></p>
