--- a/html/04_div_sectioning.html
+++ b/html/04_div_sectioning.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Div-Sectioning</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <div class="header-logo-first">Logo</div>
-        <div class="header-menulist">
-            <div class="header-menulist-menu1">menu1</div>
-            <div class="header-menulist-menu2">menu2</div>
-            <div class="header-menulist-menu3">menu3</div>
-        </div>
-    </div>
+      <div class="header-logo-first">Logo</div>
 
-    <div class="content">
+      <div class="header-menulist">
+        <div class="header-menulist-menu1">menu1</div>
+        <div class="header-menulist-menu2">menu2</div>
+        <div class="header-menulist-menu3">menu3</div>
+      </div>
+</div>
+
+      <div class="content">
         <div class="content-submenu">Sub Menu</div>
         <div class="content-maincontent">Main Content</div>
-    </div>
+      </div>
 
-    <div class="footer">
+      <div class="footer">
         <div class="footer-copyright">@copyright 회사소개</div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
