--- a/html/07_paragraph_text.html
+++ b/html/07_paragraph_text.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paragraph Tag</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>&lt;Paragraph Tag&gt;</h1>
-    <p>Lorem ipsum dolor sit,<br> 
-        amet consectetur adipisicing elit. <br>
-        Doloribus odit laborum beatae nesciunt debitis nostrum excepturi ut natus voluptate omnis adipisci porro nulla quos asperiores tempore ullam obcaecati, magnam officia.</p>
-
-    <hr>
     <p>
-        <a href="">Naver</a>
-        <a href="">Google</a>
-    </p>        
-    <hr>
+      Lorem ipsum dolor sit <br />
+      amet consectetur adipisicing elit.<br />
+      Recusandae natus repellendus sit fugit explicabo maiores nisi similique,
+      perferendis voluptas sed. Harum quibusdam pariatur commodi quisquam
+      voluptate quaerat molestias architecto repellendus!
+    </p>
+
+    <hr />
+    <p>
+      <a href="">Naver</a>
+      <a href="">Google</a>
+    </p>
+    <hr />
     <p>Lorem ipsum dolor <b>bbb</b></p>
     <p>Lorem ipsum dolor <i>iiii</i></p>
     <p>Lorem ipsum dolor <strong>sssss</strong></p>
@@ -24,6 +28,5 @@
     <p>Lorem ipsum dolor <small>smsmsm</small></p>
     <p>Lorem ipsum dolor <sup>sususu</sup></p>
     <p>Lorem ipsum dolor <del>deldel</del></p>
-
-</body>
+  </body>
 </html>
