--- a/html/09_list_submenu.html
+++ b/html/09_list_submenu.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>List-Submenu</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <ul>
-        <li>About us
-            <dl>
-                <dd>ceo greeting</dd>
-                <dd>history</dd>
-                <dd>vision</dd>
-            </dl>
-        </li>
-        <li>Works
-            <ul>
-                <li>ceo greeting</li>
-                <li>history</li>
-                <li>vision</li>
-            </ul>
-        </li>
-        <li>Services
-            <div>a</div>
-            <div>b</div>
-            <div>c</div>
-        </li>
-        <li>Location</li>
+      <!-- 순서없는 리스트 -->
+      <li>
+        About us
+        <dl>
+          <dd>ceo greeting</dd>
+          <dd>history</dd>
+          <dd>vision</dd>
+        </dl>
+      </li>
+
+      <li>
+        works
+        <ul>
+          <!-- ul 한번 더 리스트 생성! -->
+          <li>ceo gretting</li>
+          <li>history</li>
+          <li>vision</li>
+        </ul>
+      </li>
+
+      <li>
+        Services
+        <div>a</div>
+        <div>b</div>
+        <div>c</div>
+      </li>
+
+      <li>Location</li>
     </ul>
-</body>
+  </body>
 </html>
