--- a/html/10_table.html
+++ b/html/10_table.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table tag</title>
     <style>
-        table, th, td {
-            border: 1px solid gray;
-            border-collapse: collapse;
-        }
-        table {
-            width: 50%;
-            /* height: 300px; */     
-        }
-        th, td { height: 40px;      }
-        
+      table,
+      th,
+      td {
+        border: 1px solid gray;
+        border-collapse: collapse;
+      }
+      table {
+        width: 50%;
+        /* height: 300px; */
+      }
+      th,
+      td {
+        height: 40px;
+      }
     </style>
-</head>
-<body>
+  </head>
+
+  <body>
     <table>
-        <thead>
-            <tr>
-                <th scope="col">구분</th>
-                <th scope="col">제목1</th>
-                <th scope="col">제목2</th>
-                <th scope="col">제목3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td colspan="3">data11</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td rowspan="2">data21</td>
-                <td>data22</td>
-                <td>data23</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td colspan="2">data32</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <th scope="row">합계</th>
-                <td>total1</td>
-                <td>total2</td>
-                <td>total3</td>
-            </tr>
-        </tfoot>
+      <thead>
+        <tr>
+          <!-- scope는 th에 사용하는 속성으로 
+               제목과 내용을 연결해주는 기능을 담당
+               th scope ="col" 뜻은 제목셀부터 아래로 읽으라는 뜻 
+               사용하지 않는 경우도 있음 -->
+
+          <th scope="col">구분</th>
+          <th scope="col">제목1</th>
+          <th scope="col">제목2</th>
+          <th scope="col">제목3</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td colspan="3">data11</td>
+        </tr>
+
+        <tr>
+          <th scope="row">2</th>
+          <td rowspan="2">data21</td>
+          <td>data22</td>
+          <td>data23</td>
+        </tr>
+
+        <tr>
+          <th scope="row">3</th>
+          <td colspan="2">data32</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th scope="row">합계</th>
+          <td>total1</td>
+          <td>total2</td>
+          <td>total3</td>
+        </tr>
+      </tfoot>
     </table>
-</body>
+  </body>
 </html>
