--- a/html/11_anchor.html
+++ b/html/11_anchor.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anchor Tags</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>Anchor Tags</h1>
     <h3>절대경로</h3>
+
     <div>
-        <a href="http://www.naver.com" target="_blank">naver</a>
-        <a href="http://www.google.com" target="_blank">google</a>
-        <a href="http://127.0.0.1:5500/html/10_table.html">테이블 사용법</a>
+      <a href="https://www.naver.com/">naver</a>
+      <a href="https://www.google.com/">google</a>
+      <a href="http://127.0.0.1:5500/html/10_table.html">테이블 사용법</a>
     </div>
+
     <h3>상대경로</h3>
     <div>
-        <a href="10_table.html" target="_blank">테이블 사용법</a>
+      <a href="10_table.html" target="_blank">테이블 사용법</a>
     </div>
     <h3>파일 다운로드</h3>
-    <a href="/html/sample_site.zip">샘플사이트</a>
-</body>
+    <!-- 파일 아직 안 만들었음 -->
+    <a href="/html/sample_site.zip">샘플 사이트</a>
+  </body>
 </html>
