--- a/html/13_image.html
+++ b/html/13_image.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Img tag</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>Image Tag</h1>
-    <img src="images/logoRed.png" 
-        alt="Cgv logo"
-        width="70px">
+    <img src="images/logoRed.png" alt="CGV logo" width="70px" />
     <span>CGV</span>
-    <hr>
-</body>
+    <hr />
+  </body>
 </html>
